Vistas para partidas ranked Vistas para historial Vistas para inicio

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.loopj.android:android-async-http:1.4.5'
-    compile files('E:/Git/PeryLOL_movil-principal/libs/urlimageviewhelper-1.0.4.jar')
+    compile files('E:/Git/Pery LOL/PeryLOL_movil-principal/libs/urlimageviewhelper-1.0.4.jar')
 }
